--- a/scss/variables.css
+++ b/scss/variables.css
@@ -1,4 +1,1 @@
-.header__links {
-  background-color: #242424;
-  margin: 23px;
-}/*# sourceMappingURL=variables.css.map */
+/*# sourceMappingURL=variables.css.map */
