--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,16 +1,8 @@
 nav {
-        padding: 24px;
-    }
+  padding: 1.0625rem 1.5rem;
+}
 
 .header {
-    
-
-
-  &__logo {
-    img {
-    }
-  }
-
   &__menu {
     > span {
       display: block;
@@ -18,16 +10,53 @@ nav {
       height: 2px;
       background-color: $darkBlue;
 
-      &:not(:last-child){
+      &:not(:last-child) {
         margin-bottom: 3px;
       }
     }
   }
-}
+  &__links {
+    a {
+      position: relative;
+      font-size: $font-small;
+      color: $grayishBlue;
+      transition: color 200ms ease-in-out;
 
-&__links {
+      &:not(:last-child) {
+        margin-right: 32px;
+      }
 
-  a{
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        height: 5px;
+        left: 0;
+        right: 0;
+        bottom: -30px;
+        background: linear-gradient(to right,  $limegreen, $brightCyan);
+        opacity: 0;
+        transition: opacity 300ms ease-in-out;
+      }
+      &:hover {
+        color: $darkBlue;
+
+        &::before {
+          opacity: 1;
+          transform: opacity 300ms ease-in-out;
+        }
+      }
+    }
+
+    
+  }
+  &__invite {
+    color: white;
     font-size: $font-small;
+    transition: opacity 300ms ease-in-out;
+  
+    &:hover {
+      opacity: 0.75;
+    }
   }
 }
