--- a/scss/style.css
+++ b/scss/style.css
@@ -15,9 +15,10 @@ body {
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
   line-height: 1.3;
+  color: hsl(233deg, 8%, 62%);
 }
 
-a, a:hover, a:visited {
+a, a:visited, a:hover {
   text-decoration: none;
 }
 
@@ -35,8 +36,32 @@ a, a:hover, a:visited {
   align-items: center;
 }
 
+button, .button {
+  padding: 0.875rem 2.1875rem;
+  border-radius: 50px;
+  cursor: pointer;
+  background: linear-gradient(to right, hsl(126deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  border: 0;
+  color: white;
+  font-weight: 400;
+  font-size: 0.875rem;
+  transition: opacity 300ms ease-in-out;
+}
+
+@media (max-width: 63.9375em) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 64em) {
+  .hide-for-desktop {
+    display: none;
+  }
+}
+
 nav {
-  padding: 24px;
+  padding: 1.0625rem 1.5rem;
 }
 
 .header__menu > span {
@@ -47,4 +72,40 @@ nav {
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 3px;
+}
+.header__links a {
+  position: relative;
+  font-size: 0.875rem;
+  color: hsl(233deg, 8%, 62%);
+  transition: color 200ms ease-in-out;
+}
+.header__links a:not(:last-child) {
+  margin-right: 32px;
+}
+.header__links a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 5px;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  background: linear-gradient(to right, hsl(126deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+.header__links a:hover {
+  color: hsl(233deg, 26%, 24%);
+}
+.header__links a:hover::before {
+  opacity: 1;
+  transform: opacity 300ms ease-in-out;
+}
+.header__invite {
+  color: white;
+  font-size: 0.875rem;
+  transition: opacity 300ms ease-in-out;
+}
+.header__invite:hover {
+  opacity: 0.75;
 }/*# sourceMappingURL=style.css.map */
