--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,12 +3,44 @@ nav {
 }
 
 .header {
+  // Burger menu styles
+  &.open {
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+    .overlay {
+      animation: fade-in 300ms ease-in-out forwards;
+    }
+  }
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: 4rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background: linear-gradient($darkBlue, transparent);
+  }
+
   &__menu {
     > span {
       display: block;
       width: 26px;
       height: 2px;
       background-color: $darkBlue;
+      transition: 300ms all ease-in-out;
+      transform-origin: 5.5px;
 
       &:not(:last-child) {
         margin-bottom: 3px;
@@ -34,7 +66,7 @@ nav {
         left: 0;
         right: 0;
         bottom: -30px;
-        background: linear-gradient(to right,  $limegreen, $brightCyan);
+        background: linear-gradient(to right, $limegreen, $brightCyan);
         opacity: 0;
         transition: opacity 300ms ease-in-out;
       }
@@ -47,14 +79,12 @@ nav {
         }
       }
     }
-
-    
   }
   &__invite {
     color: white;
     font-size: $font-small;
     transition: opacity 300ms ease-in-out;
-  
+
     &:hover {
       opacity: 0.75;
     }
