finished animated mobile menu

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,11 +1,8 @@
-nav {
-  padding: 1.0625rem 1.5rem;
-}
-
 .header {
+  
   // Burger menu styles
   &.open {
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -18,41 +15,64 @@ nav {
         transform: rotate(-45deg);
       }
     }
-    .overlay {
-      animation: fade-in 300ms ease-in-out forwards;
-    }
   }
 
   .overlay {
     opacity: 0;
     position: fixed;
-    top: 4rem;
+    top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
-    background: linear-gradient($darkBlue, transparent);
+    background-image: linear-gradient($darkBlue, transparent);
   }
-
-  &__menu {
+  
+  nav {
+    position: relative;
+    background-color: $white;
+    padding-top: 1.0625rem; 
+    padding-top: 1.0625rem; 
+  }
+  
+  &__toggle {
     > span {
       display: block;
       width: 26px;
       height: 2px;
       background-color: $darkBlue;
       transition: 300ms all ease-in-out;
-      transform-origin: 5.5px;
+      transform-origin: 3px 1px;
 
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
       }
     }
   }
+
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $white;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
+
+    a {
+      display: block;
+      padding: 0.625rem;
+      color: $darkBlue;
+      text-align: center;
+    }
+  }
+
   &__links {
     a {
       position: relative;
       font-size: $font-small;
       color: $grayishBlue;
-      transition: color 200ms ease-in-out;
+      transition: color 300ms ease-in-out;
 
       &:not(:last-child) {
         margin-right: 32px;
@@ -75,11 +95,11 @@ nav {
 
         &::before {
           opacity: 1;
-          transform: opacity 300ms ease-in-out;
         }
       }
     }
   }
+
   &__invite {
     color: white;
     font-size: $font-small;
