--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -14,12 +14,23 @@ body {
   padding: 0;
   font-family: "Public Sans", sans-serif;
   font-size: $font-med;
+  font-weight: 300;
   line-height: 1.3;
   color: $grayishBlue;
+
+
+ &.noscroll {
+  overflow: hidden;
+ }
 }
 
 a, a:visited, a:hover {
   text-decoration: none;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 
@@ -54,6 +65,10 @@ button, .button {
   font-weight: 400;
   font-size: 0.875rem;
   transition: opacity 300ms ease-in-out;
+}
+
+.has__fade {
+  visibility: hidden;
 }
 
 // VISIBILITY 
