--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,7 @@
+.has__fade {
+  visibility: hidden;
+}
+
 @-webkit-keyframes fade-in {
   from {
     visibility: hidden;
@@ -12,6 +16,7 @@
     opacity: 1;
   }
 }
+
 @keyframes fade-in {
   from {
     visibility: hidden;
@@ -81,12 +86,21 @@ body {
   padding: 0;
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
+  font-weight: 300;
   line-height: 1.3;
   color: hsl(233deg, 8%, 62%);
+}
+body.noscroll {
+  overflow: hidden;
 }
 
 a, a:visited, a:hover {
   text-decoration: none;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 /* FLEXBOX */
@@ -115,6 +129,10 @@ button, .button {
   transition: opacity 300ms ease-in-out;
 }
 
+.has__fade {
+  visibility: hidden;
+}
+
 @media (max-width: 63.9375em) {
   .hide-for-mobile {
     display: none;
@@ -127,48 +145,62 @@ button, .button {
   }
 }
 
-nav {
-  padding: 1.0625rem 1.5rem;
-}
-
-.header.open .header__menu > span:first-child {
+.header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
-.header.open .header__menu > span:nth-child(2) {
+.header.open .header__toggle > span:nth-child(2) {
   opacity: 0;
 }
-.header.open .header__menu > span:last-child {
+.header.open .header__toggle > span:last-child {
   transform: rotate(-45deg);
-}
-.header.open .overlay {
-  -webkit-animation: fade-in 300ms ease-in-out forwards;
-          animation: fade-in 300ms ease-in-out forwards;
 }
 .header .overlay {
   opacity: 0;
   position: fixed;
-  top: 4rem;
+  top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background: linear-gradient(hsl(233deg, 26%, 24%), transparent);
+  background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
 }
-.header__menu > span {
+.header nav {
+  position: relative;
+  background-color: hsl(0deg, 0%, 100%);
+  padding-top: 1.0625rem;
+  padding-top: 1.0625rem;
+}
+.header__toggle > span {
   display: block;
   width: 26px;
   height: 2px;
   background-color: hsl(233deg, 26%, 24%);
   transition: 300ms all ease-in-out;
-  transform-origin: 5.5px;
+  transform-origin: 3px 1px;
 }
-.header__menu > span:not(:last-child) {
-  margin-bottom: 3px;
+.header__toggle > span:not(:last-child) {
+  margin-bottom: 5px;
+}
+.header__menu {
+  position: absolute;
+  width: calc(100% - 3rem);
+  left: 50%;
+  transform: translateX(-50%);
+  background: hsl(0deg, 0%, 100%);
+  margin-top: 1.5rem;
+  padding: 1.625rem;
+  border-radius: 5px;
+}
+.header__menu a {
+  display: block;
+  padding: 0.625rem;
+  color: hsl(233deg, 26%, 24%);
+  text-align: center;
 }
 .header__links a {
   position: relative;
   font-size: 0.875rem;
   color: hsl(233deg, 8%, 62%);
-  transition: color 200ms ease-in-out;
+  transition: color 300ms ease-in-out;
 }
 .header__links a:not(:last-child) {
   margin-right: 32px;
@@ -190,7 +222,6 @@ nav {
 }
 .header__links a:hover::before {
   opacity: 1;
-  transform: opacity 300ms ease-in-out;
 }
 .header__invite {
   color: white;
