--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 // COLOURS
 
 $darkBlue: hsl(233, 26%, 24%);
-$limegreen: hsl(126, 65%, 51%);
+$limeGreen: hsl(126, 65%, 51%);
 $brightCyan: hsl(192, 70%, 51%);
 $grayishBlue: hsl(233, 8%, 62%);
 $lightGrayishBlue: hsl(220, 16%, 96%);
@@ -9,5 +9,7 @@ $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
 // font sizes
-$font-med: 1.125rem;
+$font-medium: 1.125rem;
 $font-small: 0.875rem;
+$font-large: 1.25rem;
+$font-xlarge: 3.25rem;
