--- a/scss/style.css
+++ b/scss/style.css
@@ -85,25 +85,115 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Public Sans", sans-serif;
-  font-size: 1.125rem;
+  font-size: 0.875rem;
   font-weight: 300;
-  line-height: 1.3;
   color: hsl(233deg, 8%, 62%);
+  line-height: 1.3;
+  overflow-x: hidden;
+}
+@media (min-width: 64em) {
+  body {
+    font-size: 1.125rem;
+  }
 }
 body.noscroll {
   overflow: hidden;
 }
 
-a, a:visited, a:hover {
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  line-height: 1.15;
+  color: hsl(233deg, 26%, 24%);
+  margin-top: 0px;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  h1 {
+    font-size: 3.25rem;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+}
+@media (min-width: 64em) {
+  h2 {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
+}
+
+a,
+a:visited,
+a:hover {
   text-decoration: none;
 }
 
 .container {
+  max-width: 69.375rem;
+  margin: 0 auto;
+}
+.container__p--all {
+  padding-top: 4.375rem;
+  padding-right: 1.5rem;
+  padding-bottom: 4.375rem;
   padding-left: 1.5rem;
+}
+@media (min-width: 64em) {
+  .container__p--all {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+.container__py {
+  padding-top: 4.375rem;
+  padding-bottom: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container__py {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+.container__px {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
+.container__pt {
+  padding-top: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container__pt {
+    padding-top: 6rem;
+  }
+}
+.container__pr {
   padding-right: 1.5rem;
 }
+.container__pb {
+  padding-bottom: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container__pb {
+    padding-bottom: 6rem;
+  }
+}
+.container__pl {
+  padding-left: 1.5rem;
+}
 
-/* FLEXBOX */
 .flex {
   display: flex;
 }
@@ -117,20 +207,36 @@ a, a:visited, a:hover {
   align-items: center;
 }
 
-button, .button {
+button,
+.button {
+  position: relative;
+  display: inline-block;
   padding: 0.875rem 2.1875rem;
+  background-image: linear-gradient(to right, hsl(126deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  border: 0;
   border-radius: 50px;
   cursor: pointer;
-  background: linear-gradient(to right, hsl(126deg, 65%, 51%), hsl(192deg, 70%, 51%));
-  border: 0;
-  color: white;
+  color: hsl(0deg, 0%, 100%);
   font-weight: 400;
   font-size: 0.875rem;
   transition: opacity 300ms ease-in-out;
+  overflow: hidden;
 }
-
-.has__fade {
-  visibility: hidden;
+button::before,
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.25);
+  opacity: 0;
+  transition: opacity 150ms ease-in-out;
+}
+button:hover::before,
+.button:hover::before {
+  opacity: 1;
 }
 
 @media (max-width: 63.9375em) {
@@ -145,6 +251,10 @@ button, .button {
   }
 }
 
+.header {
+  position: relative;
+  z-index: 1;
+}
 .header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
@@ -167,7 +277,7 @@ button, .button {
   position: relative;
   background-color: hsl(0deg, 0%, 100%);
   padding-top: 1.0625rem;
-  padding-top: 1.0625rem;
+  padding-bottom: 1.0625rem;
 }
 .header__toggle > span {
   display: block;
@@ -230,4 +340,83 @@ button, .button {
 }
 .header__invite:hover {
   opacity: 0.75;
+}
+
+.hero {
+  background-color: hsl(0deg, 0%, 98%);
+}
+@media (min-width: 64em) {
+  .hero .container {
+    display: flex;
+    align-items: center;
+  }
+}
+.hero__image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 17.5rem;
+}
+@media (min-width: 40em) {
+  .hero__image {
+    min-height: 25rem;
+    background-position: center 70%;
+  }
+}
+@media (min-width: 64em) {
+  .hero__image {
+    flex: 3;
+    order: 2;
+    height: 41rem;
+    background-image: none;
+  }
+}
+@media (min-width: 64em) {
+  .hero__image::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    width: 150%;
+    background-size: 122%;
+    background-position: 0% 83%;
+  }
+}
+.hero__image::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("/images/image-mockups.png");
+  background-size: 93%;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+@media (min-width: 40em) {
+  .hero__image::after {
+    background-size: 52%;
+  }
+}
+@media (min-width: 64em) {
+  .hero__image::after {
+    width: 120%;
+    height: 122%;
+    background-size: 94%;
+    background-position: center 150%;
+    left: 22%;
+  }
+}
+.hero__text {
+  text-align: center;
+}
+@media (min-width: 64em) {
+  .hero__text {
+    flex: 2;
+    order: 1;
+    text-align: left;
+  }
 }/*# sourceMappingURL=style.css.map */
