finished features section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,1 @@
-@import "variables";
-@import "mixins";
-@import "animations";
-@import "globals";
-@import "header";
-@import "hero";
+@import "variables", "mixins", "animations", "globals", "header", "hero", "features";
