finished the landing page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,1 @@
-@import "variables", "mixins", "animations", "globals", "header", "hero", "features";
+@import "variables", "mixins", "animations", "globals", "header", "hero", "features", "article", "footer";
